--- a/css/popup.less
+++ b/css/popup.less
@@ -1,7 +1,15 @@
+@font-face {
+    font-family: 'ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    src: local('ubuntu'), url(ubuntu.woff) format('woff');
+}
+
 body {
     width: 400px;
     height: 300px;
     padding: 20px;
+    font-family: ubuntu;
 }
 #timer {
     font-size: 16px;
