--- a/css/popup.css
+++ b/css/popup.css
@@ -1,4 +1,4 @@
-body{width:400px;height:300px;padding:20px;}
+@font-face{font-family:'ubuntu';font-style:normal;font-weight:400;src:local('ubuntu'),url(ubuntu.woff) format('woff');}body{width:400px;height:300px;padding:20px;font-family:ubuntu;}
 #timer{font-size:16px;color:#555;text-align:right;}
 a{font-size:28px;color:#777;text-decoration:none;line-height:48px;padding:10px;background:#eee;margin-right:10px;font-family:ubuntu;}
 #links{padding-bottom:20px;border-bottom:5px solid #999;margin-bottom:20px;}
