--- a/css/popup.less
+++ b/css/popup.less
@@ -6,28 +6,29 @@
 }
 
 body {
-    width: 400px;
-    height: 300px;
     padding: 20px;
     font-family: ubuntu;
 }
 #timer {
-    font-size: 16px;
+    font-size: 12px;
     color: #555;
-    text-align:right;
+    div {
+	color: #333;
+	border: 1px solid #555;
+	width: 200px;
+	margin: .5em;
+	margin-left: 0;
+	padding: .5em;
+    }
 }
 a {
-    font-size: 28px;
-    color: #777;
+    font-size: 12px;
+    color: #333;
     text-decoration: none;
     line-height: 48px;
-    padding: 10px;
-    background: #eee;
-    margin-right: 10px;
+    padding: 6px;
+    border: 1px solid #555;
+    margin-right: 6px;
     font-family: ubuntu;
-}
-#links {
-    padding-bottom: 20px;
-    border-bottom: 5px solid #999;
-    margin-bottom: 20px;
+    outline: none;
 }
