--- a/css/options.css
+++ b/css/options.css
@@ -36,3 +36,30 @@ input[type="submit"] {
 #items{
     padding-bottom: 30px;
 }
+#confirm {
+    display: none;
+    position: fixed;
+    top: 0;
+    padding: 20px;
+    width: 600px;
+    height: 100%;
+    margin: 0 auto;
+    background: #fff;
+}
+#confirm textarea{
+    width: 100%;
+    height: 100px;
+    border: 1px solid #555;
+}
+#confirm-sure, #confirm-cancel {
+    width: 150px;
+    height: 20px;
+    line-height: 20px;
+    border:1px solid #555;
+    float: left;
+    margin: 14px;
+    margin-left: 0;
+    padding: 14px;
+    text-align: center;
+    cursor: pointer;
+}
