--- a/css/block.css
+++ b/css/block.css
@@ -1,12 +1,7 @@
 article {
     width: 600px;
     padding: 50px;
-    height: 200px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -350px;
-    margin-top: -150px;
+    margin: 100px auto;
     box-shadow: 0 0 15px #777;
     font-size: 18px;
     color: #555;
@@ -19,4 +14,9 @@ article {
     content:">>";
     font-weight: bold;
     padding: 0 14px;
+}
+#saying {
+    font-size: 14px;
+    padding-top:1em;
+    color: #777;
 }
